<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_TcpExchange" Id="{d5718940-a042-46e1-926a-fbeed7b7a419}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	uReadData_TcpExchangeTask: Int;
	uWriteData_PlcTask: Int;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>